# dashoy

./: .gitignore  README.md  pyproject.toml  requirements.txt
painel/: requirements.txt
painel/src/: app.py
painel/src/callbacks/: callbacks.py
painel/src/core/: climate_tools.py  constants.py  setup.py  soy_tools.py
painel/src/utils/: data_utils.py  download_utils.py  statistics_utils.py  toml_utils.py  type_utils.py
pesquisa/: Análise climática - Soja.ipynb  main.py  requirements.txt  soy_data_etl.ipynb  utils.py
src/: app.py
src/assets/: styles.css
src/core/: setup.py
