[tool.poetry]
name = "soy-dash"
version = "0.1.0"
description = "A dash for display of soy along time"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
